# mdbook-qr

./: .gitignore  404.html  Cargo.toml  Documentation.html  LICENSE.md  README.md  index.html  searchindex.js  toc.html  toc.js
.github/workflows/: deploy.yml  release.yml
docs/: .gitignore  book.toml
docs/src/: Documentation.md  Introduction.md  SUMMARY.md
src/: config.rs  html.rs  image.rs  lib.rs  main.rs  preprocessor.rs  url.rs  util.rs
